--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "autoprefixer": "^10.4.12",
         "postcss": "^8.4.18",
         "prettier": "2.7.1",
+        "sass": "^1.56.1",
         "tailwindcss": "^3.1.8",
         "vite": "^3.1.0"
     }
